--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
     <div class="content">
       <h5>About Us</h5>
       <h2>We Are Best Treatment For Our Hospital</h2>
-      <p>When deciding which charity to donate to, it's important to do your research...</p>
-      <p>Look for charities that are transparent and preventable diseases...</p>
+      <p>When deciding which charity to donate to, it's important to do your e search and find one that aligns with your values and interests. Look for charities that are transparent preventable diseases,.</p>
+      <p>When deciding which charity to donate to, it's important to do your e search and find one that aligns with your values and interests. Look for charities that are transparent preventable diseases,</p>
 
       <div class="features">
         <div class="feature">
