--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <ul class="tt-ol-menu-list">
                                     <li class="tt-ol-submenu-wrap active">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a href="#hero">Home</a>
+                                            <a href="/index.html">Home</a>
                                         </div>
                                     </li>
                                     <li class="tt-ol-submenu-wrap">
@@ -144,50 +144,52 @@
 
     <!----------- Start About Sections ---------------->
 
-<section class="about-us">
-  <div class="container">
-    <!-- Left Content -->
-    <div class="content">
-      <h5>About Us</h5>
-      <h2>We Are Best Treatment For Our Hospital</h2>
-      <p>When deciding which charity to donate to, it's important to do your e search and find one that aligns with your values and interests. Look for charities that are transparent preventable diseases,.</p>
-      <p>When deciding which charity to donate to, it's important to do your e search and find one that aligns with your values and interests. Look for charities that are transparent preventable diseases,</p>
+    <section class="about-us">
+        <div class="container">
+            <!-- Left Content -->
+            <div class="content">
+                <h5>About Us</h5>
+                <h2>We Are Best Treatment For Our Hospital</h2>
+                <p>When deciding which charity to donate to, it's important to do your e search and find one that aligns
+                    with your values and interests. Look for charities that are transparent preventable diseases,.</p>
+                <p>When deciding which charity to donate to, it's important to do your e search and find one that aligns
+                    with your values and interests. Look for charities that are transparent preventable diseases,</p>
 
-      <div class="features">
-        <div class="feature">
-          <div class="icon"><i class="fa-solid fa-hand-holding-dollar"></i></div>
-          <div class="text">
-            <h4>Donation</h4>
-            <p>Fund programs that help children escape poverty...</p>
-          </div>
-        </div>
+                <div class="features">
+                    <div class="feature">
+                        <div class="icon"><i class="fa-solid fa-hand-holding-dollar"></i></div>
+                        <div class="text">
+                            <h4>Donation</h4>
+                            <p>Fund programs that help children escape poverty...</p>
+                        </div>
+                    </div>
 
-        <div class="feature">
-          <div class="icon"><i class="fa-regular fa-user"></i></div>
-          <div class="text">
-            <h4>Volunteer</h4>
-            <p>Fund programs that help children escape poverty...</p>
-          </div>
-        </div>
-      </div>
+                    <div class="feature">
+                        <div class="icon"><i class="fa-regular fa-user"></i></div>
+                        <div class="text">
+                            <h4>Volunteer</h4>
+                            <p>Fund programs that help children escape poverty...</p>
+                        </div>
+                    </div>
+                </div>
 
-      <button class="read-more">Read More</button>
-    </div>
+                <button class="read-more">Read More</button>
+            </div>
 
-    <!-- Right Image Section -->
-    <div class="images">
-      <div class="image-wrapper">
-        <img src="images/image.png" alt="Happy Children" />
-        <div class="play-btn" id="open-video">
+            <!-- Right Image Section -->
+            <div class="images">
+                <div class="image-wrapper">
+                    <img src="images/image.png" alt="Happy Children" />
+                    <!-- <div class="play-btn" id="open-video">
           <i class="fa-solid fa-play"></i>
+        </div> -->
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<!-- Video Modal -->
-<div class="video-modal" id="videoModal">
+    <!-- Video Modal -->
+    <!-- <div class="video-modal" id="videoModal">
   <div class="video-content">
     <span class="close-btn" id="close-video">&times;</span>
     <iframe id="youtubeIframe"
@@ -196,11 +198,249 @@
       allowfullscreen>
     </iframe>
   </div>
-</div>
+</div> -->
 
 
 
     <!----------- End About Sections ---------------->
+
+
+    <!----------- Start Testimonial Sections ---------------->
+
+   <section class="testimonial-section">
+    <div class="testimonial-img">
+      <!-- <img src="/images/Aboutus.avif" alt=""> -->
+    </div>
+
+    <div class="testimonial-content">
+      <div style="position: absolute; top: 50px;">
+
+
+        <h4 class="subtitle">CUSTOMER STORY</h4>
+        <h2 class="title">Over 400 Brands Satisfied</h2>
+        <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p>
+      </div>
+      <div class="slider-full-container">
+        <!-- Testimonial Slider -->
+        <div class="slider-container">
+          <div class="slider-track" id="sliderTrack">
+            <!-- Slide 1 -->
+            <div class="testimonial-card">
+              <div class="card-header">
+                <img src="/images/truck1.webp" alt="Company Logo" class="company-logo" />
+                <div class="company-info">
+                  <h4>Global<br><span>English Hub</span></h4>
+                  <div class="stars">★★★★★</div>
+                </div>
+              </div>
+
+              <div class="card-body">
+                <p class="quote-icon">❝</p>
+                <p class="testimonial-text">
+                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
+                  strived to finish the client’s development work. In the end, they
+                  successfully created the site and app. The team’s accessibility and
+                  high-caliber work made them a reliable partner.
+                </p>
+              </div>
+
+              <div class="card-footer">
+                <div class="person-info">
+                  <strong>Nasrullah M.</strong>
+                  <div class="position">Founder</div>
+                </div>
+                <div class="validated-by">
+                  <span>VALIDATED BY</span>
+                  <img src="clutch-logo.png" alt="Clutch Logo" />
+                </div>
+              </div>
+            </div>
+
+            <!-- Slide 2 -->
+            <div class="testimonial-card">
+              <!-- Your testimonial content here -->
+              <div class="card-header">
+                <img src="logo.png" alt="Company Logo" class="company-logo" />
+                <div class="company-info">
+                  <h4>Global<br><span>English Hub</span></h4>
+                  <div class="stars">★★★★★</div>
+                </div>
+              </div>
+
+              <div class="card-body">
+                <p class="quote-icon">❝</p>
+                <p class="testimonial-text">
+                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
+                  strived to finish the client’s development work. In the end, they
+                  successfully created the site and app. The team’s accessibility and
+                  high-caliber work made them a reliable partner.
+                </p>
+              </div>
+
+              <div class="card-footer">
+                <div class="person-info">
+                  <strong>Nasrullah M.</strong>
+                  <div class="position">Founder</div>
+                </div>
+                <div class="validated-by">
+                  <span>VALIDATED BY</span>
+                  <img src="clutch-logo.png" alt="Clutch Logo" />
+                </div>
+              </div>
+            </div>
+
+            <!-- Slide 4 -->
+            <div class="testimonial-card">
+              <!-- Your testimonial content here -->
+              <div class="card-header">
+                <img src="logo.png" alt="Company Logo" class="company-logo" />
+                <div class="company-info">
+                  <h4>Global<br><span>English Hub</span></h4>
+                  <div class="stars">★★★★★</div>
+                </div>
+              </div>
+
+              <div class="card-body">
+                <p class="quote-icon">❝</p>
+                <p class="testimonial-text">
+                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
+                  strived to finish the client’s development work. In the end, they
+                  successfully created the site and app. The team’s accessibility and
+                  high-caliber work made them a reliable partner.
+                </p>
+              </div>
+
+              <div class="card-footer">
+                <div class="person-info">
+                  <strong>Nasrullah M.</strong>
+                  <div class="position">Founder</div>
+                </div>
+                <div class="validated-by">
+                  <span>VALIDATED BY</span>
+                  <img src="clutch-logo.png" alt="Clutch Logo" />
+                </div>
+              </div>
+            </div>
+
+            <!-- Slide 5 -->
+            <div class="testimonial-card">
+              <!-- Your testimonial content here -->
+              <div class="card-header">
+                <img src="logo.png" alt="Company Logo" class="company-logo" />
+                <div class="company-info">
+                  <h4>Global<br><span>English Hub</span></h4>
+                  <div class="stars">★★★★★</div>
+                </div>
+              </div>
+
+              <div class="card-body">
+                <p class="quote-icon">❝</p>
+                <p class="testimonial-text">
+                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
+                  strived to finish the client’s development work. In the end, they
+                  successfully created the site and app. The team’s accessibility and
+                  high-caliber work made them a reliable partner.
+                </p>
+              </div>
+
+              <div class="card-footer">
+                <div class="person-info">
+                  <strong>Nasrullah M.</strong>
+                  <div class="position">Founder</div>
+                </div>
+                <div class="validated-by">
+                  <span>VALIDATED BY</span>
+                  <img src="clutch-logo.png" alt="Clutch Logo" />
+                </div>
+              </div>
+            </div>
+
+            <!-- Slide 6 -->
+            <div class="testimonial-card">
+              <!-- Your testimonial content here -->
+              <div class="card-header">
+                <img src="logo.png" alt="Company Logo" class="company-logo" />
+                <div class="company-info">
+                  <h4>Global<br><span>English Hub</span></h4>
+                  <div class="stars">★★★★★</div>
+                </div>
+              </div>
+
+              <div class="card-body">
+                <p class="quote-icon">❝</p>
+                <p class="testimonial-text">
+                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
+                  strived to finish the client’s development work. In the end, they
+                  successfully created the site and app. The team’s accessibility and
+                  high-caliber work made them a reliable partner.
+                </p>
+              </div>
+
+              <div class="card-footer">
+                <div class="person-info">
+                  <strong>Nasrullah M.</strong>
+                  <div class="position">Founder</div>
+                </div>
+                <div class="validated-by">
+                  <span>VALIDATED BY</span>
+                  <img src="clutch-logo.png" alt="Clutch Logo" />
+                </div>
+              </div>
+            </div>
+
+            <!-- Slide 7 -->
+            <div class="testimonial-card">
+              <!-- Your testimonial content here -->
+              <div class="card-header">
+                <img src="logo.png" alt="Company Logo" class="company-logo" />
+                <div class="company-info">
+                  <h4>Global<br><span>English Hub</span></h4>
+                  <div class="stars">★★★★★</div>
+                </div>
+              </div>
+
+              <div class="card-body">
+                <p class="quote-icon">❝</p>
+                <p class="testimonial-text">
+                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
+                  strived to finish the client’s development work. In the end, they
+                  successfully created the site and app. The team’s accessibility and
+                  high-caliber work made them a reliable partner.
+                </p>
+              </div>
+
+              <div class="card-footer">
+                <div class="person-info">
+                  <strong>Nasrullah M.</strong>
+                  <div class="position">Founder</div>
+                </div>
+                <div class="validated-by">
+                  <span>VALIDATED BY</span>
+                  <img src="clutch-logo.png" alt="Clutch Logo" />
+                </div>
+              </div>
+            </div>
+
+            <!-- Add more as needed -->
+          </div>
+
+
+
+          <!-- Navigation Buttons -->
+          <div style="display: flex;">
+            <div class="nav-buttons">
+              <button onclick="prevSlide()">&#8592;</button>
+              <button onclick="nextSlide()">&#8594;</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+    <!----------- End Testimonial Sections ---------------->
+
 
     <!----------- Start Footer Sections ---------------->
 
@@ -215,15 +455,15 @@
                 <h3>Contact Us</h3>
                 <div class="contact-info">
                     <div class="contact-row">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <span>Near Azad Cement, 100 Foot Road, Ghitorni, Delhi - 110030, India</span>
+                        <img src="https://www.bloomsindia.net/images/icon-location.svg" alt="">
+                        <span>Near Azad Cement, 100 Foot Road,<br> Ghitorni, Delhi - 110030, India</span>
                     </div>
                     <div class="contact-row">
-                        <i class="fas fa-phone-alt"></i>
+                        <img src="https://www.bloomsindia.net/images/icon-phone.svg" alt="">
                         <span>+91 9211511597</span>
                     </div>
                     <div class="contact-row">
-                        <i class="fas fa-envelope"></i>
+                        <img src="https://www.bloomsindia.net/images/icon-mail.svg" alt="">
                         <span>info@bloomsindia.net</span>
                     </div>
                 </div>
@@ -234,11 +474,11 @@
                 <h3>Share With Us</h3>
                 <p>Special offers on social networks</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-x-twitter"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><img src="https://www.bloomsindia.net/newimg/instagram.png" alt="logo"></a>
+                    <a href="#"><img src="https://www.bloomsindia.net/newimg/facebook.png" alt="logo"></a>
+                    <a href="#"><img src="https://www.bloomsindia.net/newimg/twitter.png" alt="logo"></a>
+                    <a href="#"><img src="https://www.bloomsindia.net/newimg/youtube-icon.png" alt="logo"></a>
+                    <a href="#"><img src="https://www.bloomsindia.net/newimg/linkedin.png" alt="logo"></a>
                 </div>
             </div>
 
