--- a/index.html
+++ b/index.html
@@ -437,6 +437,51 @@
     </div>
   </section>
 
+  <section class="why-choose-us">
+    <div class="column left-container">
+
+
+      <div class="icon-group">
+        <div class="icon-card">
+          <i class="fas fa-lightbulb"></i>
+          <h4>Sample Headline</h4>
+          <p>Sample text. Click to select the text box.</p>
+        </div>
+        <div class="icon-card light">
+          <i class="fas fa-clock"></i>
+          <h4>Sample Headline</h4>
+          <p>Sample text. Click to select the text box.</p>
+        </div>
+      </div>
+      <div class="left-container-image">
+
+        <img src="/images/Aboutus.avif" alt="Left Image">
+      </div>
+    </div>
+
+    <div class="column right-container">
+      <div class="title text-content">
+        <h2>Why <span>Choose <br> Us?</span> </h2>
+        <p>Everyday we work hard to make life of our clients <br> better and happier.</p>
+      </div>
+
+      <div class="right-blow-container">
+        <div class="icon-card icon-card-blow  ">
+          <i class="fas fa-calendar"></i>
+          <h4>Sample Headline</h4>
+          <p>Sample text. Click to select the text box.</p>
+        </div>
+
+        <div class="icon-card icon-card-blow dark">
+          <i class="fas fa-cog"></i>
+          <h4 style="color: #e0e0e0;">Sample Headline</h4>
+          <p>Sample text. Click to select the text box.</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
     <!----------- End Testimonial Sections ---------------->
 
 
@@ -484,7 +529,7 @@
             <div class="footer-col">
                 <h3>Newsletter</h3>
                 <p>Subscribe our newsletter</p>
-                <div class="newsletter-section">
+                <div class="newsletter-section" style="display: none;">
                     <div class="newsletter-input">
                         <input type="email" placeholder="Email Address" required>
                         <button type="submit">Subscribe</button>
@@ -494,7 +539,7 @@
             </div>
         </div>
 
-        <div class="footer-bottom">
+        <div class="footer-bottom" style="display: none;">
             <div class="bottom-links">
                 <a href="#">Home</a>
                 <a href="#">About Us</a>
