--- a/about.html
+++ b/about.html
@@ -5,308 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Customer Section</title>
-  
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: 'Montserrat', sans-serif;
+    }
+
+
+  </style>
+
 </head>
 
 <body>
 
-  <section class="testimonial-section">
-    <div class="testimonial-img">
-      <img src="/images/Aboutus.avif" alt="">
-    </div>
-
-    <div class="testimonial-content">
-      <div style="position: absolute; top: 50px;">
+  
 
 
-        <h4 class="subtitle">CUSTOMER STORY</h4>
-        <h2 class="title">Over 400 Brands Satisfied</h2>
-        <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p>
-      </div>
-      <div class="slider-full-container" style="position: absolute; right: -10%; top: 35%; overflow-y: hidden;">
-        <!-- Testimonial Slider -->
-        <div class="slider-container">
-          <div class="slider-track" id="sliderTrack">
-            <!-- Slide 1 -->
-            <div class="testimonial-card">
-              <div class="card-header">
-                <img src="/images/truck1.webp" alt="Company Logo" class="company-logo" />
-                <div class="company-info">
-                  <h4>Global<br><span>English Hub</span></h4>
-                  <div class="stars">★★★★★</div>
-                </div>
-              </div>
-
-              <div class="card-body">
-                <p class="quote-icon">❝</p>
-                <p class="testimonial-text">
-                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                  strived to finish the client’s development work. In the end, they
-                  successfully created the site and app. The team’s accessibility and
-                  high-caliber work made them a reliable partner.
-                </p>
-              </div>
-
-              <div class="card-footer">
-                <div class="person-info">
-                  <strong>Nasrullah M.</strong>
-                  <div class="position">Founder</div>
-                </div>
-                <div class="validated-by">
-                  <span>VALIDATED BY</span>
-                  <img src="clutch-logo.png" alt="Clutch Logo" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 2 -->
-            <div class="testimonial-card">
-              <!-- Your testimonial content here -->
-              <div class="card-header">
-                <img src="logo.png" alt="Company Logo" class="company-logo" />
-                <div class="company-info">
-                  <h4>Global<br><span>English Hub</span></h4>
-                  <div class="stars">★★★★★</div>
-                </div>
-              </div>
-
-              <div class="card-body">
-                <p class="quote-icon">❝</p>
-                <p class="testimonial-text">
-                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                  strived to finish the client’s development work. In the end, they
-                  successfully created the site and app. The team’s accessibility and
-                  high-caliber work made them a reliable partner.
-                </p>
-              </div>
-
-              <div class="card-footer">
-                <div class="person-info">
-                  <strong>Nasrullah M.</strong>
-                  <div class="position">Founder</div>
-                </div>
-                <div class="validated-by">
-                  <span>VALIDATED BY</span>
-                  <img src="clutch-logo.png" alt="Clutch Logo" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 4 -->
-            <div class="testimonial-card">
-              <!-- Your testimonial content here -->
-              <div class="card-header">
-                <img src="logo.png" alt="Company Logo" class="company-logo" />
-                <div class="company-info">
-                  <h4>Global<br><span>English Hub</span></h4>
-                  <div class="stars">★★★★★</div>
-                </div>
-              </div>
-
-              <div class="card-body">
-                <p class="quote-icon">❝</p>
-                <p class="testimonial-text">
-                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                  strived to finish the client’s development work. In the end, they
-                  successfully created the site and app. The team’s accessibility and
-                  high-caliber work made them a reliable partner.
-                </p>
-              </div>
-
-              <div class="card-footer">
-                <div class="person-info">
-                  <strong>Nasrullah M.</strong>
-                  <div class="position">Founder</div>
-                </div>
-                <div class="validated-by">
-                  <span>VALIDATED BY</span>
-                  <img src="clutch-logo.png" alt="Clutch Logo" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 5 -->
-            <div class="testimonial-card">
-              <!-- Your testimonial content here -->
-              <div class="card-header">
-                <img src="logo.png" alt="Company Logo" class="company-logo" />
-                <div class="company-info">
-                  <h4>Global<br><span>English Hub</span></h4>
-                  <div class="stars">★★★★★</div>
-                </div>
-              </div>
-
-              <div class="card-body">
-                <p class="quote-icon">❝</p>
-                <p class="testimonial-text">
-                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                  strived to finish the client’s development work. In the end, they
-                  successfully created the site and app. The team’s accessibility and
-                  high-caliber work made them a reliable partner.
-                </p>
-              </div>
-
-              <div class="card-footer">
-                <div class="person-info">
-                  <strong>Nasrullah M.</strong>
-                  <div class="position">Founder</div>
-                </div>
-                <div class="validated-by">
-                  <span>VALIDATED BY</span>
-                  <img src="clutch-logo.png" alt="Clutch Logo" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 6 -->
-            <div class="testimonial-card">
-              <!-- Your testimonial content here -->
-              <div class="card-header">
-                <img src="logo.png" alt="Company Logo" class="company-logo" />
-                <div class="company-info">
-                  <h4>Global<br><span>English Hub</span></h4>
-                  <div class="stars">★★★★★</div>
-                </div>
-              </div>
-
-              <div class="card-body">
-                <p class="quote-icon">❝</p>
-                <p class="testimonial-text">
-                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                  strived to finish the client’s development work. In the end, they
-                  successfully created the site and app. The team’s accessibility and
-                  high-caliber work made them a reliable partner.
-                </p>
-              </div>
-
-              <div class="card-footer">
-                <div class="person-info">
-                  <strong>Nasrullah M.</strong>
-                  <div class="position">Founder</div>
-                </div>
-                <div class="validated-by">
-                  <span>VALIDATED BY</span>
-                  <img src="clutch-logo.png" alt="Clutch Logo" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 7 -->
-            <div class="testimonial-card">
-              <!-- Your testimonial content here -->
-              <div class="card-header">
-                <img src="logo.png" alt="Company Logo" class="company-logo" />
-                <div class="company-info">
-                  <h4>Global<br><span>English Hub</span></h4>
-                  <div class="stars">★★★★★</div>
-                </div>
-              </div>
-
-              <div class="card-body">
-                <p class="quote-icon">❝</p>
-                <p class="testimonial-text">
-                  Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                  strived to finish the client’s development work. In the end, they
-                  successfully created the site and app. The team’s accessibility and
-                  high-caliber work made them a reliable partner.
-                </p>
-              </div>
-
-              <div class="card-footer">
-                <div class="person-info">
-                  <strong>Nasrullah M.</strong>
-                  <div class="position">Founder</div>
-                </div>
-                <div class="validated-by">
-                  <span>VALIDATED BY</span>
-                  <img src="clutch-logo.png" alt="Clutch Logo" />
-                </div>
-              </div>
-            </div>
-
-            <!-- Add more as needed -->
-          </div>
-
-
-
-          <!-- Navigation Buttons -->
-          <div style="display: flex;">
-            <div class="nav-buttons">
-              <button onclick="prevSlide()">&#8592;</button>
-              <button onclick="nextSlide()">&#8594;</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-
-  <!-- <section class="testimonial-section">
-    <div class="testimonial-img">
-      <img src="images/truck1.webp" alt="Client">
-    </div>
-    <div class="testimonial-content">
-      <h4 class="subtitle">CUSTOMER STORY</h4>
-      <h2 class="title">Over 400 Brands Satisfied</h2>
-      <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p>
-    </div>
-  </section> -->
-
-
-
-  <!-- <div class="container">
-    <main class="main">
-      <div class="image-section"
-        style="background-image: url('https://placehold.co/800x1200/e0e0e0/333333?text=Customer+Image');">
-        Background image section
-      </div>
-    </main>
-    <div class="testimonial-content">
-      <h4 class="subtitle">CUSTOMER STORY</h4>
-      <h2 class="title">Over 400 Brands Satisfied</h2>
-      <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p>
-
-    </div>
-
-  </div> -->
-
-  <!-- <footer>
-    <div class="footer-logos">
-      <img src="https://placehold.co/100x40/1e3a8a/ffffff?text=NASSCOM" alt="NASSCOM Logo">
-      <img src="https://placehold.co/100x40/1e3a8a/ffffff?text=RAWBANK" alt="RAWBANK Logo">
-      <img src="https://placehold.co/100x40/1e3a8a/ffffff?text=RAYTEL" alt="RAYTEL Logo">
-      <img src="https://placehold.co/100x40/1e3a8a/ffffff?text=UN" alt="UN Logo">
-      <img src="https://placehold.co/100x40/1e3a8a/ffffff?text=PACEFUNDING" alt="PACEFUNDING Logo">
-    </div>
-  </footer> -->
-  <script>
-    let currentIndex = 0;
-
-    function updateSlidePosition() {
-      const track = document.getElementById("sliderTrack");
-      const slideWidth = document.querySelector(".testimonial-card").offsetWidth;
-      track.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
-    }
-
-    function nextSlide() {
-      const slides = document.querySelectorAll(".testimonial-card");
-      if (currentIndex < slides.length - 1) {
-        currentIndex++;
-        updateSlidePosition();
-      }
-    }
-
-    function prevSlide() {
-      if (currentIndex > 0) {
-        currentIndex--;
-        updateSlidePosition();
-      }
-    }
-
-    window.addEventListener("resize", updateSlidePosition);
-  </script>
 
 
 </body>
