--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
 
 
     <!----------- Start About Sections ---------------->
-
     <section class="about-us">
         <div class="container">
             <!-- Left Content -->
@@ -216,7 +215,7 @@
         </div>
 
         <div class="testimonial-content">
-            <div style="position: absolute; top: 50px;">
+            <div class="testimonial-title">
                 <h4 class="subtitle">CUSTOMER STORY</h4>
                 <h2 class="title">Over 400 Brands Satisfied</h2>
                 <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p>
@@ -425,8 +424,6 @@
 
                         <!-- Add more as needed -->
                     </div>
-
-
 
                     <!-- Navigation Buttons -->
                     <div style="display: flex;">
