--- a/index.html
+++ b/index.html
@@ -129,12 +129,14 @@
                         </div>
                         <div class="tt-wrap">
                             <div class="container-title">
-                                <h1 class="title">
-                                    <span class="titleUp">Helping<div class="inline-block space"></div>
-                                        Brands</span><span class="titleDown italic">ALAKNANDA<div
-                                            class="text-stroke inline-block">TRANSPORT</div>
-                                    </span>
-                                </h1>
+                                <div class="title">
+                                    <div class="titleUp">Alaknanda<div class="inline-block space"></div>
+                                        Transport</div>
+                                    <div class="titleDown italic">“At Molesiss Transport, we move your goods safely,
+                                        swiftly, and<div class="text-stroke inline-block">reliably—delivering excellence
+                                            across every mile, every shipment, every time.”
+                                        </div>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -573,6 +575,62 @@
         </div>
     </section>
     <!----------- End Services Sections ---------------->
+    <hr style="background-color: #7b0f1d;">
+    <!----------- Start Footer Sections ---------------->
+  <section class="contact-section">
+    <div style="margin-bottom: 250px;">
+
+
+      <h2>Contact Us</h2>
+      <p>Any question or remarks? Just write us a message!</p>
+
+      <div class="form-container">
+        <input type="text" placeholder="Enter your Name" name="name">
+        <input type="email" placeholder="Enter a valid email address" name="email">
+      </div>
+
+      <button class="submit-btn">Submit</button>
+    </div>
+
+
+    <!-- Info Section -->
+    <div class="info-section">
+
+      <div class="info-boxes">
+
+        <div class="info-box">
+          <div class="info-box-details">
+            <div class="info-icon"><i class="fas fa-running"></i></div>
+            <h3>ABOUT CLUB</h3>
+            <p>Running Guide<br>Workouts</p>
+          </div>
+
+        </div>
+
+        <div class="info-box">
+          <div class="info-box-details">
+            <div class="info-icon"><i class="fas fa-phone-alt"></i></div>
+            <h3>PHONE(LANDLINE)</h3>
+            <p>+999661123<br>+778899789</p>
+          </div>
+        </div>
+
+        <div class="info-box">
+          <div class="info-box-details">
+            <div class="info-icon"><i class="fas fa-map-marker-alt"></i></div>
+            <h3>OUR OFFICE LOCATION</h3>
+            <p>The Interior Design Studio Company<br>
+              The Courtyard, Al Quoz 1, Colorado,<br>
+              USA
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+    <!----------- End Footer Sections ---------------->
 
 
     <!----------- Start Footer Sections ---------------->
