--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
 
 
     <style>
+         .tt-header-inner{
+            /* background-color: #fff !important; */
+            height: 100px !important;
+        }
+
         .nav-logo img {
             height: 80px;
             width: auto;
             display: block;
-            /* background-color: aliceblue !important; */
+            /* background-color: #fff !important; */
+            margin-bottom: 40px;
         }
     </style>
 </head>
@@ -39,7 +45,7 @@
 <body id="body" class="home-page tt-transition tt-boxed tt-magic-cursor">
 
     <header id="tt-header">
-        <div class="tt-header-inner">
+        <div class="tt-header-inner" >
             <div class="tt-header-col nav-logo">
                 <!-- Begin logo 
                 ================ -->
@@ -73,17 +79,17 @@
                                     </li>
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a href="https://www.gozoop.com/culture">Culture</a>
+                                            <a href="https://www.gozoop.com/culture">services</a>
                                         </div>
                                     </li>
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a href="https://www.gozoop.com/press">Press</a>
+                                            <a href="/contact.html">Contact US</a>
                                         </div>
                                     </li>
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a href="https://www.gozoop.com/services">services</a>
+                                            <a href="https://www.gozoop.com/services">Other</a>
                                         </div>
                                     </li>
                                     <li><a href="https://www.gozoop.com/contact-us">GET IN TOUCH</a></li>
@@ -519,7 +525,7 @@
 
 
     <!----------- Start Services Sections ---------------->
-    <section class="services-section">
+    <section class="services-section" style="display: none;">
         <div class="service-container">
             <h2 class="section-title">Why choose us ? because we provide best services</h2>
             <div class="service-grid">
@@ -576,61 +582,7 @@
     </section>
     <!----------- End Services Sections ---------------->
     <hr style="background-color: #7b0f1d;">
-    <!----------- Start Footer Sections ---------------->
-  <section class="contact-section">
-    <div style="margin-bottom: 250px;">
-
-
-      <h2>Contact Us</h2>
-      <p>Any question or remarks? Just write us a message!</p>
-
-      <div class="form-container">
-        <input type="text" placeholder="Enter your Name" name="name">
-        <input type="email" placeholder="Enter a valid email address" name="email">
-      </div>
-
-      <button class="submit-btn">Submit</button>
-    </div>
-
-
-    <!-- Info Section -->
-    <div class="info-section">
-
-      <div class="info-boxes">
-
-        <div class="info-box">
-          <div class="info-box-details">
-            <div class="info-icon"><i class="fas fa-running"></i></div>
-            <h3>ABOUT CLUB</h3>
-            <p>Running Guide<br>Workouts</p>
-          </div>
-
-        </div>
-
-        <div class="info-box">
-          <div class="info-box-details">
-            <div class="info-icon"><i class="fas fa-phone-alt"></i></div>
-            <h3>PHONE(LANDLINE)</h3>
-            <p>+999661123<br>+778899789</p>
-          </div>
-        </div>
-
-        <div class="info-box">
-          <div class="info-box-details">
-            <div class="info-icon"><i class="fas fa-map-marker-alt"></i></div>
-            <h3>OUR OFFICE LOCATION</h3>
-            <p>The Interior Design Studio Company<br>
-              The Courtyard, Al Quoz 1, Colorado,<br>
-              USA
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-    <!----------- End Footer Sections ---------------->
+   
 
 
     <!----------- Start Footer Sections ---------------->
