--- a/about.html
+++ b/about.html
@@ -804,7 +804,7 @@
 
   <!-- Slant Shape -->
   <div class="slant">
-    <a href="#">Karzo</a>
+    <a href="#">Home</a>
     <span>&raquo;</span>
     <span>About Us</span>
 
