--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,12 @@
 
     <style>
 
-        .tt-header-inner{
+        body{
             background-color: #fff !important;
+        }
+
+        .tt-header-inner{
+            /* background-color: #fff !important; */
             height: 100px !important;
         }
 
@@ -39,6 +43,8 @@
             display: block;
             /* background-color: #fff !important; */
             margin-bottom: 40px;
+            z-index: 100 !important;
+
         }
     </style>
 </head>
@@ -50,7 +56,7 @@
             <div class="tt-header-col nav-logo">
                 <!-- Begin logo 
                 ================ -->
-                <img src="/images/Alaknanda Transport logo final.png" alt="">
+                <img src="/images/Alaknanda Transport logo final.png" alt="logo">
                 <!-- End logo -->
             </div>
             <!-- /.tt-header-col -->
